# keyboard-biometric-

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup_and_run.sh  start_backend.sh  start_frontend.sh  test_api.py
.github/workflows/: ci.yml
backend/: app.py  data_processor.py  ml_model.py  requirements.txt
examples/keystroke_data/user_a/: sample1.json
examples/keystroke_data/user_b/: sample1.json
examples/text_data/author_a/: sample1.txt
examples/text_data/author_b/: sample1.txt
frontend/: app.js  index.html  style.css
src/persona_by_text/: __init__.py  cli.py  data.py  keystroke.py  ks_data.py  model.py  reporting.py  webapp.py
tests/: test_cli_smoke.py
